fix the modal responsiveness on mobile view

--- a/app/components/Modal.module.css
+++ b/app/components/Modal.module.css
@@ -159,7 +159,7 @@ margin-left: auto;
 
 @media screen and (max-width: 767px) {
 	.modalContent {
-		width: 80vw;
+		width: 100vw;
 	}
 
 	.carouselContainer {
